driver: nwp: siwx917: Add configurable power profile support via DeviceTree
This commit adds support for configuring the power/performance
profile for the siwx917 device using a generic
'power-profile' property in DeviceTree.
The property is available for WiFi nodes,
allowing flexible selection of power management
profiles per application or board via overlay.

Signed-off-by: S Mohamed Fiaz <fiaz.mohamed@silabs.com>

--- a/dts/bindings/wifi/silabs,siwx91x-wifi.yaml
+++ b/dts/bindings/wifi/silabs,siwx91x-wifi.yaml
@@ -5,3 +5,15 @@
 description: Silabs SiWx91x SoC WiFi
 
 compatible: "silabs,siwx91x-wifi"
+
+properties:
+  power-profile:
+    type: int
+    default: 0
+    description: |
+      Power/performance profile for the device.
+      0: HIGH_PERFORMANCE
+      1: ASSOCIATED_POWER_SAVE
+      2: ASSOCIATED_POWER_SAVE_LOW_LATENCY
+      3: DEEP_SLEEP_WITHOUT_RAM_RETENTION
+      4: DEEP_SLEEP_WITH_RAM_RETENTION
