--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -123,6 +123,7 @@ source "drivers/gpio/Kconfig.esp32"
 source "drivers/gpio/Kconfig.fxl6408"
 source "drivers/gpio/Kconfig.gd32"
 source "drivers/gpio/Kconfig.gecko"
+source "drivers/gpio/Kconfig.silabs"
 source "drivers/gpio/Kconfig.grgpio"
 source "drivers/gpio/Kconfig.ifx_cat1"
 source "drivers/gpio/Kconfig.imx"
