--- a/dts/arm/silabs/xg24/xg24.dtsi
+++ b/dts/arm/silabs/xg24/xg24.dtsi
@@ -347,7 +347,7 @@
 		};
 
 		gpio: gpio@5003c000 {
-			compatible = "silabs,gecko-gpio";
+			compatible = "silabs,gecko-gpio","silabs,gpio";
 			reg = <0x5003c000 0x440>;
 			interrupts = <26 2>, <25 2>;
 			interrupt-names = "GPIO_EVEN", "GPIO_ODD";
@@ -358,7 +358,7 @@
 			#size-cells = <1>;
 
 			gpioa: gpio@5003c030 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c030 0x30>;
 				peripheral-id = <0>;
 				gpio-controller;
@@ -367,7 +367,7 @@
 			};
 
 			gpiob: gpio@5003c060 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c060 0x30>;
 				peripheral-id = <1>;
 				gpio-controller;
@@ -376,7 +376,7 @@
 			};
 
 			gpioc: gpio@5003c090 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c090 0x30>;
 				peripheral-id = <2>;
 				gpio-controller;
@@ -385,7 +385,7 @@
 			};
 
 			gpiod: gpio@5003c0C0 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c0C0 0x30>;
 				peripheral-id = <3>;
 				gpio-controller;
