drivers: gpio: silabs: gpio driver for EFR series 2 devices
Added the gpio driver for EFR series 2 devices.

Signed-off-by: S Mohamed Fiaz <fiaz.mohamed@silabs.com>

--- a/dts/arm/silabs/xg24/xg24.dtsi
+++ b/dts/arm/silabs/xg24/xg24.dtsi
@@ -427,7 +427,7 @@
 		};
 
 		gpio: gpio@5003c000 {
-			compatible = "silabs,gecko-gpio";
+			compatible = "silabs,gecko-gpio","silabs,gpio";
 			reg = <0x5003c000 0x440>;
 			interrupts = <26 2>, <25 2>;
 			interrupt-names = "GPIO_EVEN", "GPIO_ODD";
@@ -438,7 +438,7 @@
 			#size-cells = <1>;
 
 			gpioa: gpio@5003c030 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c030 0x30>;
 				peripheral-id = <0>;
 				gpio-controller;
@@ -447,7 +447,7 @@
 			};
 
 			gpiob: gpio@5003c060 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c060 0x30>;
 				peripheral-id = <1>;
 				gpio-controller;
@@ -456,7 +456,7 @@
 			};
 
 			gpioc: gpio@5003c090 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c090 0x30>;
 				peripheral-id = <2>;
 				gpio-controller;
@@ -465,7 +465,7 @@
 			};
 
 			gpiod: gpio@5003c0C0 {
-				compatible = "silabs,gecko-gpio-port";
+				compatible = "silabs,gecko-gpio-port","silabs,gpio-port";
 				reg = <0x5003c0C0 0x30>;
 				peripheral-id = <3>;
 				gpio-controller;
